blocks/v2-dealer-locator/v2-dealer-locator.css
/* ... */
.v2-dealer-locator .sidebar .panel-card .panel-container ul {
  list-style-type: none;
  padding: 10px;
}

.v2-dealer-locator .sidebar .panel-card .panel-container img {
  margin-bottom: 70px;
}

.v2-dealer-locator .sidebar .panel-card .panel-container button {
  display: flexbox;
  display: flex;
  -ms-flex-align: center;
  align-items: center;
  padding: 12px 16px;
  position: relative;
  text-align: left;
  width: 100%;
  box-sizing: border-box;
  cursor: pointer;
  background: var(--c-primary-white);
  border: 0;
  border-radius: 0;
  font: inherit;
  list-style: none;
  margin: 0;
  outline: 0;
  overflow: visible;
  vertical-align: baseline;
}

.v2-dealer-locator .sidebar .panel-card .panel-container button:hover {
  background-color: var(--c-primary-white);
  text-decoration: none;
}

.v2-dealer-locator .sidebar .panel-card .panel-container button i {
  background-size: 24px 24px;
  height: 24px;
  width: 24px;
  font-size: 20px;
}

.v2-dealer-locator .sidebar .panel-card .panel-container button .text {
  min-width: 0;
  display: flexbox;
  display: flex;
  flex: 1;
  flex-direction: column;
  height: 36px;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 18px;
  padding-left: 4px;
  font-size: 15px;
  font-family: var(--fallback-ff-default);
}

.v2-dealer-locator .sidebar .panel-card .panel-container button .icon {
  width: 24px;
  height: 24px;
}

.v2-dealer-locator .sidebar .panel-card .panel-container .range-filter {
  appearance: none;
  width: 100%;
  height: 15px;
  border-radius: 5px;
  background: var(--c-secondary-silver);
  outline: 0;
  opacity: 0.7;
  transition: 0.2s;
  transition: opacity 0.2s;
  z-index: 10;
}

.v2-dealer-locator .sidebar .panel-card .panel-container .range-filter:hover {
  opacity: 1;
}

.v2-dealer-locator .sidebar .panel-card .panel-container .range-filter::-webkit-slider-thumb {
  appearance: none;
  width: 25px;
  height: 25px;
  border-radius: 50%;
  background: var(--c-primary-black);
  z-index: 15;
  cursor: pointer;
}

.v2-dealer-locator .sidebar .panel-card .panel-container .range-filter::-moz-range-thumb {
  width: 25px;
  height: 25px;
  border-radius: 50%;
  background: var(--c-primary-black);
  z-index: 15;
  cursor: pointer;
}

.v2-dealer-locator .sidebar .panel-card .panel-container .range-filter::-ms-track {
  width: 100%;
  height: 8.4px;
  cursor: pointer;
  animate: 0.2s;
  background: 0 0;
  border-color: transparent;
  border-width: 16px 0;
  color: transparent;
}

.v2-dealer-locator .sidebar .panel-card .panel-container .range-filter::-ms-fill-lower {
  background: var(--c-accent-copper);
  border: 0.2px solid #010101;
  border-radius: 2.6px;
  box-shadow:
    1px 1px 1px var(--c-primary-black),
    0 0 1px #0d0d0d;
}

.v2-dealer-locator .sidebar .panel-card .panel-container .range-filter::-ms-fill-upper {
  background: var(--border-focus);
  border: 0.2px solid #010101;
  border-radius: 2.6px;
  box-shadow:
    1px 1px 1px var(--c-primary-black),
    0 0 1px #0d0d0d;
}

.v2-dealer-locator .sidebar .panel-card .panel-container .range-filter::-ms-thumb {
  box-shadow:
    1px 1px 1px var(--c-primary-black),
    0 0 1px #0d0d0d;
  border: 1px solid var(--c-primary-black);
  height: 36px;
  width: 16px;
  border-radius: 3px;
  background: var(--c-primary-white);
  cursor: pointer;
}

.v2-dealer-locator .sidebar .panel-card .panel-container .range-filter:focus::-ms-fill-lower {
  background: var(--border-focus);
}

.v2-dealer-locator .sidebar .panel-card .panel-container .range-filter:focus::-ms-fill-upper {
  background: var(--c-accent-copper);
}

.v2-dealer-locator .sidebar .panel-card .panel-container .sliderticks {
  display: flex;
  justify-content: space-between;
  padding: 0 10px;
}

.v2-dealer-locator .sidebar .panel-card .panel-container .sliderticks option {
  position: relative;
  z-index: 5;
  display: flex;
  justify-content: center;
  text-align: center;
  width: 1px;
  height: 10px;
  line-height: 40px;
}

.v2-dealer-locator .sidebar .panel-card .panel-container #filter-options li {
  display: block;
  position: relative;
  margin-bottom: 9px;
  padding: 1px;
  cursor: pointer;
  user-select: none;
  user-select: none;
}

.v2-dealer-locator .sidebar .panel-card .panel-container #filter-options li label {
  display: block;
  position: relative;
  padding-left: 35px;
  margin-bottom: 12px;
  cursor: pointer;
  user-select: none;
  user-select: none;
  font-size: 12px;
  font-weight: 700;
}

.v2-dealer-locator .sidebar-legend .dealer div,
.v2-dealer-locator .sidebar-legend .electric-dealer div,
.v2-dealer-locator .sidebar-legend .uptime-dealer div {
  padding: 8px;
}

.v2-dealer-locator .sidebar .panel-card .panel-container #filter-options li label input {
  position: absolute;
  opacity: 0;
  cursor: pointer;
}

.v2-dealer-locator .sidebar .panel-card .panel-container #filter-options li .checkmark {
  position: absolute;
  top: 0;
  left: 0;
  height: 25px;
  width: 25px;
  background-color: var(--c-secondary-silver);
  border-radius: 50%;
}

.v2-dealer-locator .sidebar .panel-card .panel-container #filter-options li .checkmark::after {
  content: '';
  position: absolute;
  display: none;
  top: 3px;
  left: 3px;
  width: 19px !important;
  height: 18px !important;
  border-radius: 50%;
  background: var(--c-primary-white);
}

.v2-dealer-locator .sidebar .panel-card .panel-container #filter-options li input:checked ~ .checkmark::after {
  display: block;
}

.v2-dealer-locator .sidebar .panel-card .panel-container #filter-options li input:checked ~ .checkmark {
  background-color: var(--c-primary-black);
}

.v2-dealer-locator .sidebar .panel-card .panel-container #filter-options li:hover input ~ .checkmark {
  background-color: var(--c-secondary-steel);
}

.v2-dealer-locator #marker {
  width: 100%;
  height: 43px;
  display: flex;
  margin: 0 auto 70px;
}

@media (min-width: 992px) {
  .v2-dealer-locator #marker {
    width: 31px;
    height: 43px;
    margin: 0 0 70px;
  }
}
/* ... */

